# resource-agent-hypervisor

./: .gitignore  CHANGELOG.md  README.md  TODO.md  goal.yaml  pyproject.toml
hypervisor/: cli.py  paths.py
hypervisor/agent_describe/: __init__.py  collect.py  core.py  models.py  render.py
hypervisor/agent_manifest/: __init__.py  blocks.py  compose.py  materialize.py  paths.py  sync.py
scripts/: hypervisor_root.sh  repo_root.py
scripts/ci/: architecture_gate.sh  ensure_editable_install.sh
scripts/examples/: audit_agent_reports.py  cli_fallback.sh  comprehensive_test.py  effective_weather_playwright.py
scripts/tellmesh/: fix_and_publish.py  move_tests.py  split_core_packages.py  split_packages.py  sync_www.py
tests/: conftest.py  test_evolution_proposal.py
