[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resource-agent-hypervisor"
version = "0.5.6"
description = "Contract registry, domain packs, deployment registry and hypervisor control plane"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "uri3",
    "uri2pact",
    "uri2run",
    "uri2verify",
    "uri2ops",
    "nl2uri",
    "httpx>=0.27",
    "jsonschema>=4.23",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "typer>=0.26.7",
    "fastapi>=0.115",
]

[project.scripts]
hypervisor = "hypervisor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hypervisor*", "meta_agent*", "runtime_client*"]

[tool.setuptools.package-data]
hypervisor = ["py.typed", "data/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv.sources]
uri3 = { path = "../uri3", editable = true }
uri2pact = { path = "../uri2pact", editable = true }
uri2run = { path = "../uri2run", editable = true }
uri2verify = { path = "../uri2verify", editable = true }
urish = { path = "../urish", editable = true }
nl2uri = { path = "../nl2uri", editable = true }
uri2ops = { path = "../uri2ops", editable = true }
