[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resource-agent-hypervisor"
version = "0.5.6"
description = "Meta-agent and runtime client for TellMesh hypervisor"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "hypervisor",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "fastapi>=0.115",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["meta_agent*", "runtime_client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv.sources]
hypervisor = { path = "../hypervisor", editable = true }
