[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resource-agent-hypervisor"
version = "0.5.7"
description = "Meta-agent and runtime client for TellMesh hypervisor"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "hypervisor",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "fastapi>=0.115",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "resource-agent-factory"]

[tool.setuptools.packages.find]
where = ["."]
include = ["meta_agent*", "runtime_client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv.sources]
hypervisor = { path = "../hypervisor", editable = true }
resource-agent-factory = { path = "../resource-agent-factory", editable = true }
